Fix status badge alignment on bootstrap_forums_skin

--- a/skins/bootstrap_forums_skin/style.css
+++ b/skins/bootstrap_forums_skin/style.css
@@ -1077,9 +1077,13 @@ aside .widget_core_coll_search_form div.compact_search_form input.search_field {
   float: none !important;
   display: inline;
 }
+.posts_panel_title_wrapper .cell2 .evo_status.badge {
+  top: 0;
+}
 .cell1,
 .cell2 {
   display: table-cell;
+  vertical-align: middle;
 }
 a.to_top {
   font-size: 14px !important;
